objects/zkmulti__MCShipmateScheduledJobsSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Deprecated</description>
    <fields>
        <fullName>zkmulti__BatchSize__c</fullName>
        <label>Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__CronExpression__c</fullName>
        <label>Cron Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__JobId__c</fullName>
        <label>Job Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__JobStatus__c</fullName>
        <label>Job Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__JobType__c</fullName>
        <label>Job Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Name__c</fullName>
        <label>Job Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Params__c</fullName>
        <label>Params</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__RelatedObjectId__c</fullName>
        <label>Related Object Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ScheduledTrackEndTime__c</fullName>
        <label>Scheduled Track End Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ScheduledTrackFrequency__c</fullName>
        <label>Scheduled Track Frequency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ScheduledTrackFriTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled Track Fri Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__ScheduledTrackMonTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled Track Mon Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__ScheduledTrackSatTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled Track Sat Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__ScheduledTrackShipmentID__c</fullName>
        <label>Scheduled Track Shipment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ScheduledTrackStartTime__c</fullName>
        <label>Scheduled Track Start Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ScheduledTrackSunTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled Track Sun Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__ScheduledTrackThursTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled Track Thurs Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__ScheduledTrackTuesTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled Track Tues Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__ScheduledTrackWedTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled Track Wed Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__ScheduledVersionCaptureId__c</fullName>
        <label>Scheduled Version Capture ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SchedulerType__c</fullName>
        <label>Scheduler Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Zenkraft Scheduled Jobs (Deprecated)</label>
</CustomObject>